--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.14.3",
     "@astrojs/check": "^0.9.3",
+    "@astrojs/preact": "^3.5.1",
+    "@astrojs/tailwind": "^5.1.0",
+    "@heroicons/react": "^2.1.5",
+    "astro": "^4.14.3",
+    "preact": "^10.23.2",
+    "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4"
   }
 }
